# constellation-protocol

./: .gitignore  Cargo.toml  Demo.md  LICENSE  Readme.md
.soroban/identity/: ykel2.toml  ykel4.toml
constellation/adapter/soroswap/: Cargo.toml
constellation/adapter/soroswap/src/: contract.rs  error.rs  lib.rs  require.rs  router.rs  types.rs
constellation/adapter/soroswap/src/storage/: factory.rs  keys.rs  mod.rs  router.rs
constellation/factory/: Cargo.toml
constellation/factory/src/: contract.rs  error.rs  event.rs  helpers.rs  lib.rs  require.rs  test.rs  token.rs  traits.rs
constellation/factory/src/storage/: constellation_token_hash.rs  deployments_count.rs  mod.rs
constellation/lib/: Cargo.toml
constellation/lib/src/: lib.rs
constellation/module/registry/: Cargo.toml
constellation/module/trade/: Cargo.toml
constellation/module/trade/src/: contract.rs  error.rs  lib.rs  registry.rs  token.rs  validation.rs
constellation/module/trade/src/storage/: adapter.rs  admin.rs  keys.rs  mod.rs
constellation/module/trade/src/test/: add_liquidity.rs  clients.rs  mod.rs  setup.rs  test.rs
constellation/module/trade/src/traits/: adapter.rs
constellation/module/trade/test_snapshots/test/test/: swap_tokens_for_exact_tokens_amount_in_should.1.json  test_trade.1.json
constellation/registry/: Cargo.toml
constellation/registry/src/: contract.rs  error.rs
constellation/router/: Cargo.toml
constellation/router/src/: auth.md  auth.rs  contract.rs  error.rs  event.rs  factory.rs  helper.rs  lib.rs  require.rs  soroswap_router.rs  token.rs
constellation/token/: Cargo.toml
constellation/token/src/: contract.rs  error.rs  event.rs  helpers.rs  lib.rs  manager.rs  module.rs  registry.rs  require.rs  storage_types.rs  traits.rs  validation.rs
constellation/token/src/storage/: admin.rs  allowance.rs  balance.rs  component.rs  keys.rs  manager.rs  mod.rs  module.rs  registry.rs  total_supply.rs  types.rs
constellation/token/src/test/: mod.rs  test.rs  test_interface.rs
constellation/token/src/test/soroswap/: add_liquidity.rs  deposit.rs  initialize.rs  mod.rs  router.rs  setup.rs  swap.rs  swap_exact_tokens_for_tokens.rs  swap_tokens_for_exact_tokens.rs
constellation/token/test_snapshots/test/mint/test/: test_mint.1.json
constellation/token/test_snapshots/test/soroswap/deposit/: deposit_basic.1.json  deposit_basic_2.1.json  deposit_insufficient_first_liquidity.1.json  deposit_not_yet_initialized.1.json  deposit_only_token_0_sent.1.json  deposit_sufficient_first_liquidity.1.json  deposit_zero_tokens_sent.1.json
constellation/token/test_snapshots/test/soroswap/initialize/: double_initialize.1.json  initialize_initial_values_0.1.json  initialize_token_1_less_than_token_0.1.json
constellation/token/test_snapshots/test/soroswap/swap/: swap_token_0.1.json  swap_token_1.1.json  try_swap_amount_0_negative.1.json  try_swap_amount_1_negative.1.json  try_swap_amounts_zero.1.json  try_swap_no_liquidity.1.json  try_swap_not_yet_initialized.1.json  try_swap_to_token_0.1.json  try_swap_to_token_1.1.json  try_swap_token_0_insufficient_input.1.json  try_swap_token_0_low_sent.1.json  try_swap_token_1_insufficient_input.1.json  try_swap_token_1_low_sent.1.json  try_swap_token_1_optimal_plus_1.1.json
constellation/token/test_snapshots/test/soroswap/swap_exact_tokens_for_tokens/: swap_exact_tokens_for_tokens_2_hops.1.json  swap_exact_tokens_for_tokens_enough_output_amount.1.json
constellation/token/test_snapshots/test/soroswap/swap_tokens_for_exact_tokens/: swap_tokens_for_exact_tokens.1.json  swap_tokens_for_exact_tokens_2_hops.1.json  swap_tokens_for_exact_tokens_amount_in_should.1.json
constellation/token/test_snapshots/test/test/: mint_reverts_with_zero_or_negative_amount_not_allowed.1.json  swap_tokens_for_exact_tokens_amount_in_should.1.json  test_initialize_should_panic_with_already_initalized.1.json  test_initialize_should_panic_with_components_amounts_length_mismatch.1.json  test_initialize_should_panic_with_zero_components.1.json  test_initialize_should_panic_with_zero_or_negative_amount_not_allowed_1.1.json  test_initialize_should_panic_with_zero_or_negative_amount_not_allowed_2.1.json  test_initialize_successful.1.json  test_set_manager_panics_with_authorization_failed.1.json
constellation/token/test_snapshots/test/test_interface/: decimal_is_over_max.1.json  test.1.json  test_burn.1.json  test_burn_from_panics_with_insufficient_allowance.1.json  test_burn_from_panics_with_zero_or_negative_amount_not_allowed.1.json  test_burn_panics_with_zero_or_negative_amount_not_allowed.1.json  test_zero_allowance.1.json  transfer_from_insufficient_allowance.1.json  transfer_from_insufficient_balance.1.json  transfer_from_with_zero_or_negative_amount_not_allowed.1.json  transfer_insufficient_balance.1.json  transfer_panics_with_zero_or_negative_amount_not_allowed.1.json
libs/: constellation_adapter_soroswap.wasm  soroban_token_contract.wasm  soroban_token_contract.wasm.no-auth  soroswap_factory.wasm  soroswap_library.wasm  soroswap_pair.wasm  soroswap_router.wasm
libs/soroban-token-contract/src/: lib.rs
protocol/constellation-token/: Cargo.toml
protocol/constellation-token-factory/: Cargo.toml
protocol/cross_contract_a/: Cargo.toml
protocol/cross_contract_a/src/: lib.rs  test.rs
protocol/factory/: Cargo.toml
protocol/factory/src/: contract.rs  error.rs  event.rs  helpers.rs  lib.rs  test.rs  token.rs  types.rs
protocol/minter-burner/: Cargo.toml
protocol/minter-burner/src/: contract.rs  error.rs  lib.rs  test.rs  token.rs
protocol/module/amm/: Cargo.toml
protocol/module/amm/src/: lib.rs
protocol/module/amm/src/adapters/: amm.rs  mod.rs
protocol/module/trade/: Cargo.toml
protocol/router/: Cargo.toml
protocol/router/src/: contract.rs  error.rs  event.rs  factory.rs  lib.rs  test.rs  token.rs
protocol/token/: Cargo.toml
protocol/token/src/: allowance.rs  balance.rs  component.rs  contract.rs  error.rs  event.rs  helpers.rs  lib.rs  manager.rs  module.rs  storage_types.rs  test.rs  token.rs  traits.rs  types.rs
(+112 files in other folders)
