 [workspace]
 resolver = "2"
 nested = true
 members = [
    "constellation/token",
    "constellation/factory", 
    "constellation/router",
    "constellation/module/trade", "constellation/module/registry",
 ]

[workspace.dependencies]
soroban-sdk = "20.3.1"

[workspace.dev2-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils", "alloc"] }
soroban-token-sdk = { version = "20.3.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
