 [workspace]
 resolver = "2"
 nested = true
 members = [
   "constellation/registry",
    "constellation/token",
    "constellation/factory", 
    "constellation/router",
    "constellation/module/trade", 
    "constellation/adapter/soroswap"
 , "constellation/lib"]

[workspace.dependencies]
soroban-sdk = { version = "20.3.1", features = ["alloc"]}

# [workspace.dev2-dependencies]
# soroban-sdk = { version = "20.3.1", features = ["testutils", "alloc"] }
# soroban-token-sdk = { version = "20.3.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

