[package]
name = "constellation-adapter-soroswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies] 
anyhow = "1.0.81"
constellation-lib = { path = "../../lib"}
soroban-sdk.workspace = true
soroswap-library = {version = "1.0.21", default-features = false}

[dev-dependencies]
soroban-sdk = { version = "21.6.0", features = ["testutils"] }
soroban-env-common = { version = "21.2.1", features = ["testutils"]}


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
