[package]
name = "constellation-module-trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
# doctest = false

[dependencies] 
soroban-sdk.workspace = true

[dev-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }
soroban-env-common = { version = "20.2.1", features = ["testutils"]}
constellation-token = { path = "../../token"}

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
