[package]
name = "amm"
description = ""
version = "0.1.0"
edition = "2021" 
[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "20.3.1", features = ["alloc"]}
soroban-token-sdk = { version = "20.3.1" }

[dev-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils", "alloc"] }
soroban-token-sdk = { version = "20.3.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
